# quadratic

./: README.md  meson.build
.github/workflows/: test,yml  test.yml
include/: quadratic.h
test/: meson.build
tests/: tests.cpp
